<resources>
  <string name="app_name">مای کلینیک</string>
  <string name="message_please_wait">لطفا صبر کنید</string>
  <string name="yes">بله</string>
  <string name="no">خیر</string>
  <string name="button_ok">تایید</string>
  <string name="button_cancel">انصراف</string>
  <string name="healthy_chart">نمودار سلامت</string>
  <string name="medicine">داروها</string>
  <string name="home">خانه</string>
  <string name="my_doctors">پزشکان من</string>
  <string name="more">بیشتر</string>
  <string name="about_us">درباره ما</string>
  <string name="contact_us">تماس با ما</string>
  <string name="log_out">خروج از حساب کاربری</string>
  <string name="version">version 1.12</string>
  <string name="upgrade_app">ارتقاء نرم افزار</string>
  <string name="visit_time">وقت ویزیت</string>
  <string name="more_items">موارد بیشتر</string>
  <string name="my_drugs">داروهای من</string>
  <string name="drugs_list">لیست دارو ها</string>
  <string name="category">دسته بندی</string>
  <string name="stared">نشان شده ها</string>
  <string name="about_us_description">با اپلیکیشن مای کلینیک دغدغه های خود راجع به سلامتی را کاهش داده و زندگی سالمتری داشته باشید.
یادآوری زمان مصرف داروهایتان را به مای کلینیک بسپارید، این اپلیکیشن علاوه بر اینکه زمان مصرف داروهایتان را یادآوری می کند، اطلاعات کاملی در مورد آنها در اختیارتان می گذارد. اطلاعاتی مثل موارد مصرف، منع مصرف، عوارض جانبی، تداخلات دارویی و ... .
علاوه بر اینها، اطلاعات پزشکان خود را به مای کلینیک بدهید و برای آنها پروفایل بسازید.  او را در جریان نوبت ویزیت های بعدی خود قرار دهید. مطمئن باشید که مای کلینیک اجازه نمی دهد نوبتتان را فراموش کنید.
مای کلینیک حواسش به سلامتی شما هم هست. اطلاعات مربوط به سلامتی مثل فشار خون، وزن، ضربان قلب، کالری دریافت شده از رژیم غذایی و ... را به مای کلینیک بسپارید تا با آمار و نمودار، شما را در جریان وضعیت سلامتی بدنتان قرار دهد.
مای کلینیک دستیار شخصی شما در مورد سلامتی است!</string>
  <string name="specification">مشخصات</string>
  <string name="reminder">یادآور</string>
  <string name="usage">موارد مصرف</string>
  <string name="not_usage">موارد منع مصرف</string>
  <string name="side_effect">عوارض جانبی</string>
  <string name="drug_conflict">تداخل دارویی</string>
  <string name="pregnancy">مصرف برای کودکان و مادران شیرده</string>
  <string name="instruction">آموزش به بیمار و خانواده</string>
  <string name="no_reminder">شما هنوز برای این دارو یادآوری ثبت نکرده اید!</string>
  <string name="no_doctor_visit">شما هنوز برای این پزشک وقت ویزیت ثبت نکرده اید!</string>
  <string name="set_reminder">ثبت یادآور</string>
  <string name="empty" />
  <string name="intro_text_1">لیست کاملی از داروها به همراه امکان تنظیم یادآور برای آنها را در جیبتان داشته باشید.</string>
  <string name="intro_text_2">وضعیت معیارهای مهم سلامتیتان مانند فشار خون، وزن، میزان کالری مصرفی و ... را در گذر زمان بررسی کنید.</string>
  <string name="intro_text_3">اطلاعات پزشکانتان را در اپلیکیشن ذخیره کنید و همیشه و همه جا به آنها دسترسی داشته باشید.</string>
  <string name="enter_to_app">ورود به برنامه</string>
  <string name="medic_desc">برای آشنا شدن با مای کلینیک، ورق بزنید!</string>
  <string name="intro_text_0">به اپلیکیشن مای کلینیک خوش آمدید!\n با مای کلینیک سالمتر زندگی کنید!</string>
  <string name="set_alarm_for_drugs">برای دارو های مصرفی تان، یادآور تنظیم کنید!</string>
  <string name="set_visit_empty">مای کلینیک وقت ویزیتتان را به شما یادآوری می کند!</string>
  <string name="set_visit">ثبت وقت ویزیت</string>
  <string name="set_drug_alarm">ثبت یادآور دارو</string>
  <string name="register_doctor">ثبت پزشک</string>
  <string name="doctor_name">نام پزشک</string>
  <string name="filed">تخصص</string>
  <string name="phone_number">شماره تماس</string>
  <string name="phone_number_tel">۰۲۱-۲۲۸۵۴۲۸۵</string>
  <string name="address">آدرس</string>
  <string name="weight">وزن</string>
  <string name="weight_unit">Kg</string>
  <string name="blood_pressure">فشار خون</string>
  <string name="blood_pressure_unit">mmHg</string>
  <string name="heart_beat">ضربان قلب</string>
  <string name="heart_beat_unit">bpm</string>
  <string name="blood_glucose">قند خون</string>
  <string name="blood_glucose_unit">Mg/dl</string>
  <string name="body_temperature">دمای بدن</string>
  <string name="body_temperature_unit">C</string>
  <string name="daily_walk">پیاده روی روزانه</string>
  <string name="daily_walk_unit">Steps</string>
  <string name="calories_consumed">کالری مصرفی</string>
  <string name="calories_consumed_unit">Calories</string>
  <string name="triglyceride">تری گلیسیرید</string>
  <string name="colesterol_ldl">کلسترول LDL</string>
  <string name="colesterol_hdl">کلسترل HDL</string>
  <string name="calories_recieved">کالری دریافتی</string>
  <string name="add_to_stared">افزودن به نشان شده ها</string>
  <string name="add_to_my_drug">افزودن به دارو های من</string>
  <string name="remove_from_stared">حذف از نشان شده ها</string>
  <string name="remove_from_my_drug">حذف از دارو های من</string>
  <string name="remove_reminder">حذف یادآور دارو</string>
  <string name="reminder_setting">تنظیمات یادآور دارو</string>
  <string name="set_new_reminder">تنظیم یادآور</string>
  <string name="search_drugs_hint">جستجو در داروها...</string>
  <string name="no_result">هیچ نتیجه ای یافت نشد</string>
  <string name="error_doctor_name_is_empty">نام دکتر نمی تواند خالی باشد</string>
  <string name="error_field_is_empty">این قسمت نمی تواند خالی باشد</string>
  <string name="message_register_doctor_successful">ثبت دکتر با موفقیت انجام شد</string>
  <string name="error_in_register_doctor">خطا در ثبت دکتر</string>
  <string name="expertise">تخصص</string>
  <string name="edit_doctor">ویرایش مشخصات پزشک</string>
  <string name="delete_doctor">حذف پزشک</string>
  <string name="edit_visit">ویرایش وقت ویزیت</string>
  <string name="delete_visit">حذف وقت ویزیت</string>
  <string name="message_confirm_delete_doctor">آیا از حذف پزشک اطمینان دارید؟</string>
  <string name="message_confirm_exit">آیا میخواهید از حساب کاربری خود خارج شوید؟</string>
  <string name="delete">حذف</string>
  <string name="register_weight_title">ثبت وزن</string>
  <string name="new_weight">وزن جدید</string>
  <string name="measure_time_label">زمان اندازه گیری</string>
  <string name="date">تاریخ</string>
  <string name="click_add_date">جهت انتخاب تاریخ لمس کنید</string>
  <string name="click_add_time">جهت انتخاب زمان لمس کنید</string>
  <string name="hour">ساعت</string>
  <string name="add_health_measure">ثبت نمودار سلامت</string>
  <string name="error_input_value_not_correct">مقدار وارد شده صحیح نیست</string>
  <string name="choose_date_is_required">انتخاب تاریخ ضروری است</string>
  <string name="choose_time_is_required">انتخاب  ساعت ضروری است</string>
  <string name="enter_phone_is_required">وارد کردن شماره تلفن ضروری است</string>
  <string name="choose_doctor_is_required">انتخاب دکتر ضروری است</string>
  <string name="data_inserted_successfully">اطلاعات شما با موفقیت ثبت شد</string>
  <string name="chart">نمودار</string>
  <string name="history">تاریخچه</string>
  <string name="register_visit">ثبت وقت ویزیت</string>
  <string name="choose_doctor">پزشک مورد نظر را انتخاب نمایید</string>
  <string name="visit">وقت ویزیت</string>
  <string name="number_of_usage">دفعات مصرف در روز</string>
  <string name="description">توضیحات</string>
  <string name="search_in_doctors">جستجو در فهرست پزشکان</string>
  <string name="contact_us_detail">
\n\n
ایمیل: info@inotek.ir
  </string>
  <string name="register_drug">ثبت دارو</string>
  <string name="choose_drug">دارو مورد نظر را انتخاب نمایید</string>
  <string name="drug_reminder">یادآوری مصرف دارو</string>
  <string name="search_in_drugs">جستجو در داروها</string>
  <string name="exit_text">برای خروج دوباره دکمه بازگشت را لمس کنید</string>
  <string name="exit">خروج</string>
  <string name="number_of_use_each_time">تعداد مصرف در وعده</string>
  <string name="one_item">۱ عدد</string>
  <string name="two_item">۲ عدد</string>
  <string name="three_item">۳ عدد</string>
  <string name="four_item">۴ عدد</string>
  <string name="five_item">۵ عدد</string>
  <string name="six_item">۶ عدد</string>
  <string name="seven_item">۷ عدد</string>
  <string name="eight_item">۸ عدد</string>
  <string name="repeat_period">بازه زمانی تکرار</string>
  <string name="every_day">هر روز</string>
  <string name="specific_day">روز های خاصی از هفته</string>
  <string name="select_day_of_week">انتخاب روز های هفته</string>
  <string name="saturday">شنبه</string>
  <string name="sunday">یکشنبه</string>
  <string name="monday">دوشنبه</string>
  <string name="tuesday">سه شنبه</string>
  <string name="wednesday">چهارشنبه</string>
  <string name="thursday">پنجشنبه</string>
  <string name="friday">جمعه</string>
  <string name="saturday_comma">شنبه,</string>
  <string name="sunday_comma">یکشنبه,</string>
  <string name="monday_comma">دوشنبه,</string>
  <string name="tuesday_comma">سه شنبه,</string>
  <string name="wednesday_comma">چهارشنبه,</string>
  <string name="thursday_comma">پنجشنبه,</string>
  <string name="friday_comma">جمعه,</string>
  <string name="register">ثبت</string>
  <string name="number_of_use_in_day">دفعات مصرف در روز</string>
  <string name="usage_instruction">دستور العمل مصرف </string>
  <string name="last_usage_time">آخرین زمان مصرف:</string>
  <string name="in_day">در روز</string>
  <string name="usage_hour">ساعت مصرف</string>
  <string name="in_each_meal">در هر وعده</string>
  <string name="error_no_drug_selected">هیچ دارویی انتخاب نشده است</string>
  <string name="newest_video">جدیدترین ویدیوها</string>
  <string name="videos_category">دسته بندی ویدیوها</string>
  <string name="message_no_doctor_found">هیچ پزشکی یافت نشد.</string>
  <string name="error_page_txt">در حال حاظر امکان مشاهده این صفحه وجود ندارد</string>
  <string name="video">ویدیو</string>
  <string name="mobile_number">شماره تلفن همراه</string>
  <string name="error_no_network">خطا در اتصال به اینترنت</string>
  <string name="error_server">خطا در سرور</string>
  <string name="enter_phone_description">برای وارد شدن به برنامه،‌لطفا شماره تلفن همراه خود را وارد نمایید تا کد ورود برای شما ارسال گردد</string>
  <string name="get_code">دریافت کد ورود</string>
  <string name="please_enter_valid_number">لطفا شماره معتبر وارد کنید!</string>
  <string name="enter_code">کد ورود</string>
  <string name="please_enter_code">لطفا کد ورود را وارد نمایید</string>
  <string name="resend_code">ارسال مجدد کد ورود</string>
  <string name="code_sent_to_numer_x">کد ورود به شماره %s ارسال گردید</string>
  <string name="retry_code_in">امکان ارسال مجدد کد در</string>
  <string name="register_code">کد تایید</string>
  <string name="code_has_sent">کد از طریق پیامک به تلفن همراه شما ارسال شد.</string>
  <string name="stars">****</string>
  <string name="invalid_code">کد وارد شده معتبر نمی باشد</string>
  <string name="resend">ارسال مجدد کد ورود</string>
  <string name="retry_code_in_1">امکان ارسال مجدد کد تا </string>
  <string name="submit">تایید</string>
  <string name="enter">ورود</string>
  <string name="enter_desc">برای دریافت کد از طریق پیامک، شماره ی خود را وارد نمائید.</string>
  <string name="get_code_1">دریافت کد</string>
  <string name="error_in_connecting_to_server">خطا در ارتباط با سرور</string>
  <string name="entered_code_in_wrong">کد وارد شده صحیح نیست</string>
  <string name="credit_low">اعتبار شما کافی نیست</string>
  <string name="cancel">انصراف</string>
  <string name="logout_account">خروج از حساب کاربری</string>
  <string name="no_data_found">هیچ اطلاعاتی یافت نشد</string>
  <string name="getting_video_list">در حال دریافت لیست ویدیو ها</string>
  <string name="getting_video_detail">در حال دریافت اطلاعات ویدیو</string>
  <string name="no_network_found">دسترسی به اینترنت امکان پذیر نمی باشد</string>
  <string name="contact_us_text">شما می توانید از طریق شماره تلفن و آدرس ایمیل زیر با تیم پشتیبانی مای کلینیک در ارتباط باشید.
  </string>
  <string name="support_phone">تلفن پشتیبانی</string>
  <string name="support_email">ایمیل پشتیبانی</string>
  <string name="email">Info@rasaaa.com</string>
</resources>