<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  tools:context="app.arash.androidcore.ui.activity.AboutUsActivity">
  <LinearLayout
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:background="@color/color_primary"
    android:orientation="horizontal">
    <TextView
      style="@style/IranSans.Medium"
      android:layout_width="0dp"
      android:layout_height="56dp"
      android:layout_weight="1"
      android:paddingEnd="16dp"
      android:paddingRight="16dp"
      android:gravity="right|center"
      android:text="@string/contact_us"
      android:textColor="@color/white"
      android:textSize="16sp" />
    <ImageView
      android:id="@+id/back_img"
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:layout_gravity="center"
      android:paddingLeft="16dp"
      android:paddingRight="16dp"
      android:src="@drawable/ic_back_24_dp" />

  </LinearLayout>

  <ScrollView
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:visibility="gone">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

      <TextView
        android:id="@+id/contact_us_text"
        style="@style/ContactUsText"
        android:text="@string/contact_us_text" />

      <View style="@style/Separators" />

      <LinearLayout
        android:id="@+id/fragment_contact_us_phone_container"
        style="@style/ContactUsItemContainer">

        <ImageView style="@style/ContactUsItemArrow" />

        <LinearLayout style="@style/ContactUsItemPhoneContainer">

          <TextView
            android:id="@+id/contact_us_phone"
            style="@style/ContactUsItemPhoneNumber"
            android:text="@string/phone_number_tel" />

          <TextView
            style="@style/ContactUsItemPhoneText"
            android:text="@string/support_phone" />

        </LinearLayout>

        <ImageView
          style="@style/ContactUsItemImage"
          android:src="@drawable/ic_phone_green_24_dp" />

      </LinearLayout>

      <View style="@style/Separators" />

      <LinearLayout
        android:id="@+id/fragment_contact_us_email_container"
        style="@style/ContactUsItemContainer">

        <ImageView style="@style/ContactUsItemArrow" />

        <LinearLayout style="@style/ContactUsItemPhoneContainer">

          <TextView
            android:id="@+id/contact_us_mail"
            style="@style/ContactUsItemPhoneNumber"
            android:text="@string/email" />

          <TextView
            style="@style/ContactUsItemPhoneText"
            android:text="@string/support_email" />

        </LinearLayout>

        <ImageView
          style="@style/ContactUsItemImage"
          android:src="@drawable/ic_email_blue_24_dp" />

      </LinearLayout>

      <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/bottom_bar_shadow" />
    </LinearLayout>
  </ScrollView>

</LinearLayout>
