<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">
  <TextView
    android:id="@+id/add_to_stared_tv"
    style="@style/IranSans.Light"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="20dp"
    android:paddingBottom="12dp"
    android:paddingRight="14dp"
    android:drawableEnd="@drawable/ic_star_24_gray"
    android:drawablePadding="35dp"
    android:drawableRight="@drawable/ic_star_24_gray"
    android:gravity="center|right"
    android:text="@string/add_to_stared"
    android:textColor="@color/black_21"
    android:textSize="14sp" />

  <TextView
    android:id="@+id/add_to_my_drug_tv"
    style="@style/IranSans.Light"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="12dp"
    android:paddingBottom="12dp"
    android:paddingRight="14dp"
    android:drawableEnd="@drawable/ic_person_add_24_dp"
    android:drawablePadding="35dp"
    android:drawableRight="@drawable/ic_person_add_24_dp"
    android:gravity="center|right"
    android:text="@string/add_to_my_drug"
    android:textColor="@color/black_21"
    android:textSize="14sp" />
  <TextView
    android:id="@+id/remove_from_stared_tv"
    style="@style/IranSans.Light"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="12dp"
    android:paddingBottom="12dp"
    android:paddingRight="14dp"
    android:drawableEnd="@drawable/ic_star_off_24_dp"
    android:drawablePadding="35dp"
    android:drawableRight="@drawable/ic_star_off_24_dp"
    android:gravity="center|right"
    android:text="@string/remove_from_stared"
    android:textColor="@color/black_21"
    android:textSize="14sp" />
  <TextView
    android:id="@+id/remove_from_my_drug_tv"
    style="@style/IranSans.Light"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="12dp"
    android:paddingBottom="12dp"
    android:paddingRight="14dp"
    android:drawableEnd="@drawable/ic_person_minus_24_dp"
    android:drawablePadding="35dp"
    android:drawableRight="@drawable/ic_person_minus_24_dp"
    android:gravity="center|right"
    android:text="@string/remove_from_my_drug"
    android:textColor="@color/black_21"
    android:textSize="14sp" />
  <View
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="7dp"
    android:background="@color/gray_e0" />

  <TextView
    android:id="@+id/remove_reminder_tv"
    style="@style/IranSans.Light"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="12dp"
    android:paddingBottom="12dp"
    android:paddingRight="14dp"
    android:drawableEnd="@drawable/ic_bell_off_24_dp"
    android:drawablePadding="35dp"
    android:drawableRight="@drawable/ic_bell_off_24_dp"
    android:gravity="center|right"
    android:text="@string/remove_reminder"
    android:textColor="@color/black_21"
    android:textSize="14sp" />
  <TextView
    android:id="@+id/reminder_setting_tv"
    style="@style/IranSans.Light"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="12dp"
    android:paddingBottom="12dp"
    android:paddingRight="14dp"
    android:drawableEnd="@drawable/ic_settings_24_dp"
    android:drawablePadding="35dp"
    android:drawableRight="@drawable/ic_settings_24_dp"
    android:gravity="center|right"
    android:text="@string/reminder_setting"
    android:textColor="@color/black_21"
    android:textSize="14sp" />
  <TextView
    android:id="@+id/set_reminder_tv"
    style="@style/IranSans.Light"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="12dp"
    android:paddingBottom="12dp"
    android:paddingRight="14dp"
    android:drawableEnd="@drawable/ic_bell_24_gray"
    android:drawablePadding="35dp"
    android:drawableRight="@drawable/ic_bell_24_gray"
    android:gravity="center|right"
    android:text="@string/set_new_reminder"
    android:textColor="@color/black_21"
    android:textSize="14sp" />
  <View
    android:layout_width="match_parent"
    android:layout_height="12dp"
    android:background="@color/white" />
</LinearLayout>