<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">
  <TextView
    android:id="@+id/edit_doctor_tv"
    style="@style/IranSans.Light"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="20dp"
    android:paddingBottom="12dp"
    android:paddingRight="14dp"
    android:drawableEnd="@drawable/ic_edit_24_dp"
    android:drawablePadding="35dp"
    android:drawableRight="@drawable/ic_edit_24_dp"
    android:gravity="center|right"
    android:text="@string/edit_doctor"
    android:textColor="@color/black_21"
    android:textSize="14sp" />

  <TextView
    android:id="@+id/delete_doctor_tv"
    style="@style/IranSans.Light"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="12dp"
    android:paddingBottom="12dp"
    android:paddingRight="14dp"
    android:drawableEnd="@drawable/ic_delete_24_dp"
    android:drawablePadding="35dp"
    android:drawableRight="@drawable/ic_delete_24_dp"
    android:gravity="center|right"
    android:text="@string/delete_doctor"
    android:textColor="@color/black_21"
    android:textSize="14sp" />

  <TextView
    android:id="@+id/edit_visit"
    style="@style/IranSans.Light"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="20dp"
    android:paddingBottom="12dp"
    android:paddingRight="14dp"
    android:drawableEnd="@drawable/ic_edit_24_dp"
    android:drawablePadding="35dp"
    android:drawableRight="@drawable/ic_edit_24_dp"
    android:gravity="center|right"
    android:text="@string/edit_visit"
    android:textColor="@color/black_21"
    android:textSize="14sp" />

  <TextView
    android:id="@+id/delete_visit"
    style="@style/IranSans.Light"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="12dp"
    android:paddingBottom="12dp"
    android:paddingRight="14dp"
    android:drawableEnd="@drawable/ic_delete_24_dp"
    android:drawablePadding="35dp"
    android:drawableRight="@drawable/ic_delete_24_dp"
    android:gravity="center|right"
    android:text="@string/delete_visit"
    android:textColor="@color/black_21"
    android:textSize="14sp" />

  <View
    android:layout_width="match_parent"
    android:layout_height="12dp"
    android:background="@color/white" />
</LinearLayout>