<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/phone_main_lay"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/colorPrimaryDark">

  <TextView
    android:id="@+id/toolbar_title"
    style="@style/ToolbarTitle"
    android:text="@string/enter_to_app"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <ImageView
    android:id="@+id/back_img"
    style="@style/PhoneBack"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent" />


  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/back_img">

    <android.support.constraint.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      android:layout_marginLeft="32dp"
      android:layout_marginRight="32dp">

      <TextView
        android:id="@+id/desc_tv"
        style="@style/PhoneDesc"
        android:text="@string/enter_phone_description" />

      <ImageView
        android:id="@+id/phone_iv"
        style="@style/PhoneImage"
        tools:ignore="ContentDescription" />

      <EditText
        android:id="@+id/phone_number_edt"
        style="@style/PhoneEditText" />

    </android.support.constraint.ConstraintLayout>
  </ScrollView>
  <Button
    android:id="@+id/next_btn"
    style="@style/IntroButton"
    android:text="@string/get_code"
    app:layout_constraintBottom_toBottomOf="parent" />

</android.support.constraint.ConstraintLayout>
